# gcov_error

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
include/STELA/: lib.hpp
src/: lib.cpp
test/: CMakeLists.txt
test/src/: main.cpp  test.cpp
